--- a/index.css
+++ b/index.css
@@ -8,11 +8,19 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  /* grid-template: repeat(4, 1fr) / repeat(3, 1fr); */
+  grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-gap: 5px;
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+}
+
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
 }
 
 /* add the .bigItem class */
