--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  grid-gap: 5px;
+  display: grid;
+  grid-template-columns: 50px auto 25%;
 }
 
 .grid-item {
@@ -16,3 +19,25 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  /* grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3; */
+
+  /* grid-row-start: 2;
+  grid-row-end: 4;
+  grid-column-start: 2;
+  grid-column-end: 4; */
+
+  /* grid-row: 2 / 4;
+  grid-column: 2 / 4; */
+
+  grid-area: 2/2/4/4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+
+  /* grid-area: footer-start / 1 / footer-end / 4; */
+}
